TEST: Added overlay style, book cards with image and needed book info. Tested cards, some cards author were hidden, not showing because of different image sizes. Fixed by adding margin on bottom of card with bootstrap. Tested and fixed.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,7 +2,7 @@
 html {
     height: 100%;
 }
-
+/* Background, font and color */
 body {
     background: url('/media/background_image.png') no-repeat center center fixed;
     background-size: cover;
@@ -24,7 +24,7 @@ body {
     border: 3px solid white !important;
     min-width: 295px;
 }
-
+/* Landing page white border */
 .h-100 {
     height: 96%!important;
 }
@@ -60,6 +60,17 @@ body {
 
 .border-black {
     border: 1px solid black !important;
+}
+
+/* Sticks on top of the page */
+.overlay {
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background: whitesmoke;
+	z-index: -1;
 }
 
 /* Media Queries */
